--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 
         <form id="enviar-mail" class="py-10 px-5 max-w-lg mx-auto">
             <div class="mb-10">
+                <label for="email">De:</label>
+                <input class="bg-gray-100 border shadow p-3 w-full"  id="emailTo" type="email">
+            </div>
+            <div class="mb-10">
                 <label for="email">Para:</label>
-                <input class="bg-gray-100 border shadow p-3 w-full"  id="email" type="email">
+                <input class="bg-gray-100 border shadow p-3 w-full"  id="emailFrom" type="email">
             </div>
             <div class="mb-10">
                 <label for="asunto">Asunto</label>
