--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 
         <form id="enviar-mail" class="py-10 px-5 max-w-lg mx-auto">
             <div class="mb-10">
-                <label for="email">De:</label>
+                <label for="emailTo">De:</label>
                 <input class="bg-gray-100 border shadow p-3 w-full"  id="emailTo" type="email">
             </div>
             <div class="mb-10">
-                <label for="email">Para:</label>
+                <label for="emailFrom">Para:</label>
                 <input class="bg-gray-100 border shadow p-3 w-full"  id="emailFrom" type="email">
             </div>
             <div class="mb-10">
                 <label for="asunto">Asunto</label>
                 <input class="bg-gray-100 border shadow p-3 w-full"  id="asunto" type="text">
             </div>
-            <div class="mb-10"> 
+            <div class="mb-10 message"> 
                 <label for="mensaje">Mensaje</label>
                 <textarea class="bg-gray-100 border shadow p-3 w-full" id="mensaje"></textarea>
             </div>
@@ -45,7 +45,7 @@
                 </div>
             </div>
             
-            <div class="flex justify-between">
+            <div class="buttons flex justify-between">
                     <button 
                         id="enviar" class="w-full bg-blue-600 px-2 py-5 text-white items-center cursor-not-allowed opacity-50 mr-5 uppercase font-bold items-center flex justify-center" 
                         type="submit" 
