--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   </head>
   <body>
 
-    <div class="container mx-auto mt-20 bg-white">     
+    <div class="container mx-auto mt-3 bg-white">     
         <header id="header" class="bg-pink-800 p-3 font-bold">
             Enviar Nuevo Mail
         </header>
 
 
-        <form id="enviar-mail" class="py-10 px-5 max-w-lg mx-auto">
+        <form id="enviar-mail" class="pt-5 pb-5 px-5 max-w-lg mx-auto">
             <div class="mb-10">
                 <label for="emailTo">De:</label>
                 <input class="bg-gray-100 border shadow p-3 w-full"  id="emailTo" type="email">
